Added user controller with jwt auth along with swagger
